Fix invisible menu options

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #5f63cb;
   text-decoration: inherit;
 }
 a:hover {
